[gd_scene load_steps=15 format=3 uid="uid://fuinbs4kf8vi"]

[ext_resource type="TileSet" uid="uid://crnjbmrlurl2j" path="res://mapTiles.tres" id="1_8nngp"]
[ext_resource type="PackedScene" uid="uid://b3uls567ljip1" path="res://Player/player.tscn" id="1_262s8"]
[ext_resource type="PackedScene" uid="uid://d4fbj3ql4g3a2" path="res://LevelAssets/doorBoundary.tscn" id="3_c1qiv"]
[ext_resource type="PackedScene" uid="uid://cmke2jfijc1j6" path="res://LevelAssets/stairBoundary.tscn" id="4_1t2o8"]
[ext_resource type="Script" path="res://Levels/house.gd" id="6_2vdft"]
[ext_resource type="Texture2D" uid="uid://d2std35hj6vby" path="res://Assets/Images/2d_lights_and_shadows_neutral_point_light.webp" id="8_pgcgk"]
[ext_resource type="PackedScene" uid="uid://be658vvw14ovw" path="res://LevelAssets/firetruck.tscn" id="9_w0xht"]
[ext_resource type="PackedScene" uid="uid://djf4benbsy4wk" path="res://Tools/hose.tscn" id="10_sybti"]
[ext_resource type="PackedScene" uid="uid://cd0iwrpddoyk4" path="res://LevelAssets/fireStarter.tscn" id="11_eps8b"]
[ext_resource type="PackedScene" uid="uid://cqbprf32382uo" path="res://Tools/extinguisher.tscn" id="11_o5om0"]
[ext_resource type="PackedScene" uid="uid://bue2p7duffgt8" path="res://LevelAssets/breakerOutside.tscn" id="11_uetja"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8h704"]
size = Vector2(55.5, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1qes"]
size = Vector2(6.13485, 11.4437)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mm0v2"]
polygon = PackedVector2Array(-256, 319.5, -256, -256, -192, -256.5, -191.5, 384, -1152, 383.5, -1152, -512, -192.5, -512, -193, -384, -256, -384, -256, -448, -1088, -448, -1088, 320, -256, 319.5)

[node name="House" type="TileMap" groups=["level"]]
tile_set = ExtResource("1_8nngp")
format = 2
layer_0/name = "0"
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(131072, 65536, 2, 65536, 65536, 2, 0, 65536, 2, 131073, 131072, 2, 65537, 131072, 2, 1, 131072, 2, 131074, 196608, 2, 65538, 196608, 2, 2, 196608, 2, 131075, 262144, 2, 65539, 262144, 2, 3, 262144, 2, 196608, 65536, 2, 196609, 131072, 2, 196610, 196608, 2, 196611, 262144, 2, 262144, 65536, 2, 262145, 131072, 2, 262146, 196608, 2, 262147, 262144, 2, 327679, 0, 2, 262143, 0, 2, 196607, 0, 2, 131071, 0, 2, 65535, 0, 2, 65534, 0, 2, 131070, 0, 2, 196606, 0, 2, 262142, 0, 2, 327678, 0, 2, 327677, 0, 2, 262141, 0, 2, 196605, 0, 2, 131069, 0, 2, 65533, 0, 2, 327676, 65536, 1, 262140, 65536, 1, 196604, 65536, 1, 131068, 65536, 1, 65532, 65536, 1, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 327674, 0, 0, 327673, 0, 0, 327672, 0, 0, 327671, 0, 0, 327670, 0, 0, 327669, 0, 0, 327668, 327680, 0, 327667, 458752, 0, 327666, 458752, 0, 327665, 458752, 0, 327664, 458752, 0, 327663, 458752, 0, 262127, 458752, 0, 196591, 458752, 0, 131055, 458752, 0, 65519, 458752, 0, -17, 327680, 0, -65553, 0, 0, -131089, 0, 0, -196625, 0, 0, -262161, 0, 0, -327697, 131072, 131072, -393233, 131072, 131072, -393232, 131072, 131072, -393231, 131072, 131072, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393229, 0, 0, -393230, 131072, 131072, -327695, 131072, 131072, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 327680, 0, 65521, 327680, 0, 131057, 327680, 0, 196593, 327680, 0, 196592, 327680, 0, 262128, 327680, 0, 131056, 327680, 0, 65520, 327680, 0, -16, 327680, 0, -65552, 0, 0, -327696, 131072, 131072, -262160, 0, 0, -196624, 0, 0, -131088, 0, 0, 262129, 327680, 0, 262130, 327680, 0, 196594, 327680, 0, 131058, 327680, 0, 65522, 327680, 0, -14, 327680, 0, -65550, 0, 0, -131086, 0, 0, -196621, 0, 0, -262157, 0, 0, -327693, 0, 0, -327694, 131072, 131072, -262158, 0, 0, -196622, 0, 0, -131085, 0, 0, -65549, 0, 0, -12, 327680, 0, 65524, 327680, 0, 131060, 327680, 0, 131059, 327680, 0, 196595, 327680, 0, 262131, 327680, 0, 65523, 327680, 0, -13, 327680, 0, -196620, 0, 0, -262156, 0, 0, -327692, 0, 0, -327691, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 196596, 327680, 0, 262132, 327680, 0, -65548, 0, 0, -131084, 0, 0, 196597, 0, 0, 131061, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 262133, 0, 0, -196617, 0, 0, -262153, 0, 0, -327689, 0, 0, -131081, 0, 0, -65545, 262144, 1, -9, 262144, 1, 65527, 262144, 1, 131063, 0, 0, 196599, 0, 0, -262152, 0, 0, -327688, 0, 0, -196616, 262144, 1, -131080, 0, 0, -65544, 262144, 1, -8, 262144, 1, 65528, 262144, 1, 131064, 0, 0, 262135, 0, 0, 196600, 262144, 1, 262136, 0, 0, 131065, 0, 0, 65530, 0, 0, 196601, 0, 0, 262137, 0, 0, 65529, 262144, 1, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, -458760, 65536, 65537, -458761, 65536, 65537, -458762, 65536, 65537, -458763, 65536, 65537, -458764, 65536, 65537, -458765, 65536, 65537, -458766, 65536, 65537, -458767, 65536, 65537, -458768, 65536, 65537, -458769, 65536, 65537, -458770, 131072, 131073, -393234, 65536, 1, -327698, 65536, 1, -196626, 65536, 1, -131090, 65536, 1, -262162, 65536, 1, -65554, 65536, 1, -18, 65536, 1, 65518, 65536, 1, 131054, 65536, 1, 196590, 65536, 1, 262126, 65536, 1, 327662, 65536, 1, 393198, 131072, 65537, 393199, 65536, 65537, 393200, 65536, 65537, 393201, 65536, 65537, 393205, 65536, 65537, 393206, 65536, 65537, 393207, 65536, 65537, 393208, 65536, 65537, 393209, 65536, 65537, 393210, 65536, 65537, 393211, 65536, 65537, 393212, 131072, 1, 393204, 65536, 65537, 393203, 65536, 65537, 393202, 65536, 65537, 393214, 0, 2, 393213, 0, 2, 393215, 0, 2, 458751, 0, 2, 458750, 0, 2, 458749, 0, 2, 393216, 65536, 2, 327680, 65536, 2, 393217, 131072, 2, 327681, 131072, 2, 393218, 196608, 2, 327682, 196608, 2, 393219, 262144, 2, 327683, 262144, 2, 393220, 327680, 2, 327684, 327680, 2, 262148, 327680, 2, 196612, 327680, 2, 131076, 327680, 2, 65540, 327680, 2, 4, 327680, 2, 393221, 393216, 2, 327685, 393216, 2, 262149, 393216, 2, 196613, 393216, 2, 131077, 393216, 2, 65541, 393216, 2, 5, 393216, 2, 393222, 458752, 2, 327686, 458752, 2, 262150, 458752, 2, 196614, 458752, 2, 131078, 458752, 2, 65542, 458752, 2, 6, 458752, 2, 393223, 65536, 2, 327687, 65536, 2, 262151, 65536, 2, 196615, 65536, 2, 131079, 65536, 2, 65543, 65536, 2, 7, 65536, 2, 393224, 0, 2, 327688, 0, 2, 262152, 0, 2, 196616, 0, 2, 196617, 0, 2, 131081, 0, 2, 65545, 0, 2, 9, 0, 2, 131080, 0, 2, 327689, 0, 2, 393225, 0, 2, 262153, 0, 2, 8, 0, 2, 65544, 0, 2, -458759, 65536, 65537, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 262144, 1, -7, 262144, 1, -458758, 65536, 65537, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, -458757, 65536, 65537, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -458756, 131072, 196609, -393220, 65536, 1, -327684, 65536, 2, -262148, 65536, 2, -196612, 65536, 1, -131076, 65536, 1, -65540, 65536, 1, -4, 65536, 1, -393219, 0, 2, -327683, 65536, 2, -262147, 65536, 2, -196611, 0, 2, -131075, 0, 2, -65539, 0, 2, -3, 0, 2, -393218, 0, 2, -327682, 65536, 2, -262146, 65536, 2, -196610, 0, 2, -131074, 0, 2, -65538, 0, 2, -2, 0, 2, -393217, 0, 2, -327681, 65536, 2, -262145, 65536, 2, -196609, 0, 2, -131073, 0, 2, -65537, 0, 2, -1, 0, 2, -458752, 65536, 2, -393216, 65536, 2, -327680, 65536, 2, -262144, 65536, 2, -196608, 65536, 2, -131072, 65536, 2, -65536, 65536, 2, -458751, 131072, 2, -393215, 131072, 2, -327679, 131072, 2, -262143, 131072, 2, -196607, 131072, 2, -131071, 131072, 2, -65535, 131072, 2, -458750, 196608, 2, -393214, 196608, 2, -327678, 196608, 2, -262142, 196608, 2, -196606, 196608, 2, -131070, 196608, 2, -65534, 196608, 2, -458749, 262144, 2, -393213, 262144, 2, -327677, 262144, 2, -262141, 262144, 2, -196605, 262144, 2, -131069, 262144, 2, -65533, 262144, 2, -458748, 327680, 2, -393212, 327680, 2, -327676, 327680, 2, -262140, 327680, 2, -196604, 327680, 2, -131068, 327680, 2, -65532, 327680, 2, -458747, 393216, 2, -393211, 393216, 2, -327675, 393216, 2, -262139, 393216, 2, -196603, 393216, 2, -131067, 393216, 2, -65531, 393216, 2, -458746, 458752, 2, -393210, 458752, 2, -327674, 458752, 2, -262138, 458752, 2, -196602, 458752, 2, -131066, 458752, 2, -65530, 458752, 2, -458745, 65536, 2, -393209, 65536, 2, -327673, 65536, 2, -262137, 65536, 2, -196601, 65536, 2, -131065, 65536, 2, -65529, 65536, 2, -458744, 0, 2, -393208, 0, 2, -327672, 0, 2, -262136, 0, 2, -196600, 0, 2, -131064, 0, 2, -65528, 0, 2, -458743, 0, 2, -393207, 0, 2, -327671, 0, 2, -262135, 0, 2, -196599, 0, 2, -131063, 0, 2, -65527, 0, 2, -851966, 196608, 2, -786430, 196608, 2, -720894, 196608, 2, -655358, 196608, 2, -589822, 196608, 2, -524286, 196608, 2, -851967, 131072, 2, -786431, 131072, 2, -720895, 131072, 2, -655359, 131072, 2, -589823, 131072, 2, -524287, 131072, 2, -851968, 65536, 2, -786432, 65536, 2, -720896, 65536, 2, -655360, 65536, 2, -589824, 65536, 2, -524288, 65536, 2, -786435, 0, 2, -720899, 0, 2, -655363, 0, 2, -589827, 0, 2, -524291, 0, 2, -458755, 0, 2, -786434, 0, 2, -720898, 0, 2, -655362, 0, 2, -589826, 0, 2, -524290, 0, 2, -458754, 0, 2, -786433, 0, 2, -720897, 0, 2, -655361, 0, 2, -589825, 0, 2, -524289, 0, 2, -458753, 0, 2, -851960, 0, 2, -786424, 0, 2, -720888, 0, 2, -655352, 0, 2, -589816, 0, 2, -524280, 0, 2, -851959, 0, 2, -786423, 0, 2, -720887, 0, 2, -655351, 0, 2, -589815, 0, 2, -524279, 0, 2, -851958, 0, 2, -786422, 0, 2, -720886, 0, 2, -655350, 0, 2, -589814, 0, 2, -524278, 0, 2, -458742, 0, 2, -393206, 0, 2, -327670, 0, 2, -262134, 0, 2, -196598, 0, 2, -131062, 0, 2, -65526, 0, 2, 10, 0, 2, 65546, 0, 2, 131082, 0, 2, 196618, 0, 2, 262154, 0, 2, 327690, 0, 2, 393226, 0, 2, -851965, 262144, 2, -786429, 262144, 2, -720893, 262144, 2, -655357, 262144, 2, -589821, 262144, 2, -524285, 262144, 2, -851964, 327680, 2, -786428, 327680, 2, -720892, 327680, 2, -655356, 327680, 2, -589820, 327680, 2, -524284, 327680, 2, -851963, 393216, 2, -786427, 393216, 2, -720891, 393216, 2, -655355, 393216, 2, -589819, 393216, 2, -524283, 393216, 2, -851962, 458752, 2, -786426, 458752, 2, -720890, 458752, 2, -655354, 458752, 2, -589818, 458752, 2, -524282, 458752, 2, -851961, 65536, 2, -786425, 65536, 2, -720889, 65536, 2, -655353, 65536, 2, -589817, 65536, 2, -524281, 65536, 2, -786452, 0, 2, -720916, 0, 2, -655380, 0, 2, -589844, 0, 2, -524308, 0, 2, -786451, 0, 2, -720915, 0, 2, -655379, 0, 2, -589843, 0, 2, -524307, 0, 2, -786450, 0, 2, -720914, 0, 2, -655378, 0, 2, -589842, 0, 2, -524306, 0, 2, -786449, 0, 2, -720913, 0, 2, -655377, 0, 2, -589841, 0, 2, -524305, 0, 2, -786448, 0, 2, -720912, 0, 2, -655376, 0, 2, -589840, 0, 2, -524304, 0, 2, -786447, 0, 2, -720911, 0, 2, -655375, 0, 2, -589839, 0, 2, -524303, 0, 2, -786446, 0, 2, -720910, 0, 2, -655374, 0, 2, -589838, 0, 2, -524302, 0, 2, -786445, 0, 2, -720909, 0, 2, -655373, 0, 2, -589837, 0, 2, -524301, 0, 2, -786444, 0, 2, -720908, 0, 2, -655372, 0, 2, -589836, 0, 2, -524300, 0, 2, -786443, 0, 2, -720907, 0, 2, -655371, 0, 2, -589835, 0, 2, -524299, 0, 2, -786442, 0, 2, -720906, 0, 2, -655370, 0, 2, -589834, 0, 2, -524298, 0, 2, -786441, 0, 2, -720905, 0, 2, -655369, 0, 2, -589833, 0, 2, -524297, 0, 2, -786440, 0, 2, -720904, 0, 2, -655368, 0, 2, -589832, 0, 2, -524296, 0, 2, -786439, 0, 2, -720903, 0, 2, -655367, 0, 2, -589831, 0, 2, -524295, 0, 2, -786438, 0, 2, -720902, 0, 2, -655366, 0, 2, -589830, 0, 2, -524294, 0, 2, -786437, 0, 2, -720901, 0, 2, -655365, 0, 2, -589829, 0, 2, -524293, 0, 2, -786436, 0, 2, -720900, 0, 2, -655364, 0, 2, -589828, 0, 2, -524292, 0, 2, -786455, 0, 2, -720919, 0, 2, -655383, 0, 2, -589847, 0, 2, -524311, 0, 2, -458775, 0, 2, -393239, 0, 2, -327703, 0, 2, -262167, 0, 2, -196631, 0, 2, -131095, 0, 2, -65559, 0, 2, -23, 0, 2, 65513, 0, 2, 131049, 0, 2, 196585, 0, 2, 262121, 0, 2, 327657, 0, 2, 393193, 0, 2, 458729, 0, 2, 524265, 0, 2, -786454, 0, 2, -720918, 0, 2, -655382, 0, 2, -589846, 0, 2, -524310, 0, 2, -458774, 0, 2, -393238, 0, 2, -327702, 0, 2, -262166, 0, 2, -196630, 0, 2, -131094, 0, 2, -65558, 0, 2, -22, 0, 2, 65514, 0, 2, 131050, 0, 2, 196586, 0, 2, 262122, 0, 2, 327658, 0, 2, 393194, 0, 2, 458730, 0, 2, 524266, 0, 2, -786453, 0, 2, -720917, 0, 2, -655381, 0, 2, -589845, 0, 2, -524309, 0, 2, -458773, 0, 2, -393237, 0, 2, -327701, 0, 2, -262165, 0, 2, -196629, 0, 2, -131093, 0, 2, -65557, 0, 2, -21, 0, 2, 65515, 0, 2, 131051, 0, 2, 196587, 0, 2, 262123, 0, 2, 327659, 0, 2, 393195, 0, 2, 458731, 0, 2, 524267, 0, 2, -458772, 0, 2, -393236, 0, 2, -327700, 0, 2, -262164, 0, 2, -196628, 0, 2, -131092, 0, 2, -65556, 0, 2, -20, 0, 2, 65516, 0, 2, 131052, 0, 2, 196588, 0, 2, 262124, 0, 2, 327660, 0, 2, 393196, 0, 2, 458732, 0, 2, 524268, 0, 2, -458771, 0, 2, -393235, 0, 2, -327699, 0, 2, -262163, 0, 2, -196627, 0, 2, -131091, 0, 2, -65555, 0, 2, -19, 0, 2, 65517, 0, 2, 131053, 0, 2, 196589, 0, 2, 262125, 0, 2, 327661, 0, 2, 393197, 0, 2, 458733, 0, 2, 524269, 0, 2, 589801, 0, 2, 655337, 0, 2, 720873, 0, 2, 589802, 0, 2, 655338, 0, 2, 720874, 0, 2, 589803, 0, 2, 655339, 0, 2, 720875, 0, 2, 589804, 0, 2, 655340, 0, 2, 720876, 0, 2, 589805, 0, 2, 655341, 0, 2, 720877, 0, 2, 458734, 0, 2, 524270, 0, 2, 589806, 0, 2, 655342, 0, 2, 720878, 0, 2, 458735, 0, 2, 524271, 0, 2, 589807, 0, 2, 655343, 0, 2, 720879, 0, 2, 458736, 0, 2, 524272, 0, 2, 589808, 0, 2, 655344, 0, 2, 720880, 0, 2, 458737, 0, 2, 524273, 0, 2, 589809, 0, 2, 655345, 0, 2, 720881, 0, 2, 458738, 0, 2, 524274, 0, 2, 589810, 0, 2, 655346, 0, 2, 720882, 0, 2, 458739, 0, 2, 524275, 0, 2, 589811, 0, 2, 655347, 0, 2, 720883, 0, 2, 458740, 0, 2, 524276, 0, 2, 589812, 0, 2, 655348, 0, 2, 720884, 0, 2, 458741, 0, 2, 524277, 0, 2, 589813, 0, 2, 655349, 0, 2, 720885, 0, 2, 458742, 0, 2, 524278, 0, 2, 589814, 0, 2, 655350, 0, 2, 720886, 0, 2, 458743, 0, 2, 524279, 0, 2, 589815, 0, 2, 655351, 0, 2, 720887, 0, 2, 458744, 0, 2, 524280, 0, 2, 589816, 0, 2, 655352, 0, 2, 720888, 0, 2, 458745, 0, 2, 524281, 0, 2, 589817, 0, 2, 655353, 0, 2, 720889, 0, 2, 458746, 0, 2, 524282, 0, 2, 589818, 0, 2, 655354, 0, 2, 720890, 0, 2, 458747, 0, 2, 524283, 0, 2, 589819, 0, 2, 655355, 0, 2, 720891, 0, 2, 458748, 0, 2, 524284, 0, 2, 589820, 0, 2, 655356, 0, 2, 720892, 0, 2, 524285, 0, 2, 589821, 0, 2, 655357, 0, 2, 720893, 0, 2, 524286, 0, 2, 589822, 0, 2, 655358, 0, 2, 720894, 0, 2, 524287, 0, 2, 589823, 0, 2, 655359, 0, 2, 720895, 0, 2, 786409, 0, 2, 851945, 0, 2, 917481, 0, 2, 786410, 0, 2, 851946, 0, 2, 917482, 0, 2, 786411, 0, 2, 851947, 0, 2, 917483, 0, 2, 786412, 0, 2, 851948, 0, 2, 917484, 0, 2, 786413, 0, 2, 851949, 0, 2, 917485, 0, 2, 786414, 0, 2, 851950, 0, 2, 917486, 0, 2, 786415, 0, 2, 851951, 0, 2, 917487, 0, 2, 786416, 0, 2, 851952, 0, 2, 917488, 0, 2, 786417, 0, 2, 851953, 0, 2, 917489, 0, 2, 786418, 0, 2, 851954, 0, 2, 917490, 0, 2, 786419, 0, 2, 851955, 0, 2, 917491, 0, 2, 786420, 0, 2, 851956, 0, 2, 917492, 0, 2, 786421, 0, 2, 851957, 0, 2, 917493, 0, 2, 786422, 0, 2, 851958, 0, 2, 917494, 0, 2, 786423, 0, 2, 851959, 0, 2, 917495, 0, 2, 786424, 0, 2, 851960, 0, 2, 917496, 0, 2, 786425, 0, 2, 851961, 0, 2, 917497, 0, 2, 786426, 0, 2, 851962, 0, 2, 917498, 0, 2, 786427, 0, 2, 851963, 0, 2, 917499, 0, 2, 786428, 0, 2, 851964, 0, 2, 917500, 0, 2, 786429, 0, 2, 851965, 0, 2, 917501, 0, 2, 786430, 0, 2, 851966, 0, 2, 917502, 0, 2, 786431, 0, 2, 851967, 0, 2, 917503, 0, 2, 458752, 65536, 2, 524288, 65536, 2, 589824, 65536, 2, 655360, 65536, 2, 720896, 65536, 2, 786432, 65536, 2, 458753, 131072, 2, 524289, 131072, 2, 589825, 131072, 2, 655361, 131072, 2, 720897, 131072, 2, 786433, 131072, 2, 458759, 65536, 2, 524295, 65536, 2, 589831, 65536, 2, 655367, 65536, 2, 720903, 65536, 2, 786439, 65536, 2, 851975, 65536, 2, 851968, 65536, 2, 851969, 131072, 2, 458754, 196608, 2, 524290, 196608, 2, 589826, 196608, 2, 655362, 196608, 2, 720898, 196608, 2, 786434, 196608, 2, 851970, 196608, 2, 458755, 262144, 2, 524291, 262144, 2, 589827, 262144, 2, 655363, 262144, 2, 720899, 262144, 2, 786435, 262144, 2, 851971, 262144, 2, 458756, 327680, 2, 524292, 327680, 2, 589828, 327680, 2, 655364, 327680, 2, 720900, 327680, 2, 786436, 327680, 2, 851972, 327680, 2, 458757, 393216, 2, 524293, 393216, 2, 589829, 393216, 2, 655365, 393216, 2, 720901, 393216, 2, 786437, 393216, 2, 851973, 393216, 2, 458758, 458752, 2, 524294, 458752, 2, 589830, 458752, 2, 655366, 458752, 2, 720902, 458752, 2, 786438, 458752, 2, 851974, 458752, 2, -786461, 0, 2, -720925, 0, 2, -655389, 0, 2, -589853, 0, 2, -524317, 0, 2, -458781, 0, 2, -393245, 0, 2, -327709, 0, 2, -262173, 0, 2, -196637, 0, 2, -131101, 0, 2, -65565, 0, 2, -29, 0, 2, 65507, 0, 2, 131043, 0, 2, 196579, 0, 2, 262115, 0, 2, 327651, 0, 2, 393187, 0, 2, 458723, 0, 2, 524259, 0, 2, 589795, 0, 2, 655331, 0, 2, 720867, 0, 2, 786403, 0, 2, 851939, 0, 2, 917475, 0, 2, -786460, 0, 2, -720924, 0, 2, -655388, 0, 2, -589852, 0, 2, -524316, 0, 2, -458780, 0, 2, -393244, 0, 2, -327708, 0, 2, -262172, 0, 2, -196636, 0, 2, -131100, 0, 2, -65564, 0, 2, -28, 0, 2, 65508, 0, 2, 131044, 0, 2, 196580, 0, 2, 262116, 0, 2, 327652, 0, 2, 393188, 0, 2, 458724, 0, 2, 524260, 0, 2, 589796, 0, 2, 655332, 0, 2, 720868, 0, 2, 786404, 0, 2, 851940, 0, 2, 917476, 0, 2, -786459, 0, 2, -720923, 0, 2, -655387, 0, 2, -589851, 0, 2, -524315, 0, 2, -458779, 0, 2, -393243, 0, 2, -327707, 0, 2, -262171, 0, 2, -196635, 0, 2, -131099, 0, 2, -65563, 0, 2, -27, 0, 2, 65509, 0, 2, 131045, 0, 2, 196581, 0, 2, 262117, 0, 2, 327653, 0, 2, 393189, 0, 2, 458725, 0, 2, 524261, 0, 2, 589797, 0, 2, 655333, 0, 2, 720869, 0, 2, 786405, 0, 2, 851941, 0, 2, 917477, 0, 2, -786458, 0, 2, -720922, 0, 2, -655386, 0, 2, -589850, 0, 2, -524314, 0, 2, -458778, 0, 2, -393242, 0, 2, -327706, 0, 2, -262170, 0, 2, -196634, 0, 2, -131098, 0, 2, -65562, 0, 2, -26, 0, 2, 65510, 0, 2, 131046, 0, 2, 196582, 0, 2, 262118, 0, 2, 327654, 0, 2, 393190, 0, 2, 458726, 0, 2, 524262, 0, 2, 589798, 0, 2, 655334, 0, 2, 720870, 0, 2, 786406, 0, 2, 851942, 0, 2, 917478, 0, 2, -786457, 0, 2, -720921, 0, 2, -655385, 0, 2, -589849, 0, 2, -524313, 0, 2, -458777, 0, 2, -393241, 0, 2, -327705, 0, 2, -262169, 0, 2, -196633, 0, 2, -131097, 0, 2, -65561, 0, 2, -25, 0, 2, 65511, 0, 2, 131047, 0, 2, 196583, 0, 2, 262119, 0, 2, 327655, 0, 2, 393191, 0, 2, 458727, 0, 2, 524263, 0, 2, 589799, 0, 2, 655335, 0, 2, 720871, 0, 2, 786407, 0, 2, 851943, 0, 2, 917479, 0, 2, -786456, 0, 2, -720920, 0, 2, -655384, 0, 2, -589848, 0, 2, -524312, 0, 2, -458776, 0, 2, -393240, 0, 2, -327704, 0, 2, -262168, 0, 2, -196632, 0, 2, -131096, 0, 2, -65560, 0, 2, -24, 0, 2, 65512, 0, 2, 131048, 0, 2, 196584, 0, 2, 262120, 0, 2, 327656, 0, 2, 393192, 0, 2, 458728, 0, 2, 524264, 0, 2, 589800, 0, 2, 655336, 0, 2, 720872, 0, 2, 786408, 0, 2, 851944, 0, 2, 917480, 0, 2, 458760, 0, 2, 524296, 0, 2, 589832, 0, 2, 655368, 0, 2, 720904, 0, 2, 786440, 0, 2, 851976, 0, 2, 458761, 0, 2, 524297, 0, 2, 589833, 0, 2, 655369, 0, 2, 720905, 0, 2, 786441, 0, 2, 851977, 0, 2, 458762, 0, 2, 524298, 0, 2, 589834, 0, 2, 655370, 0, 2, 720906, 0, 2, 786442, 0, 2, 851978, 0, 2, -5, 0, 0)
layer_1/name = "1"
layer_1/tile_data = PackedInt32Array(-262161, 0, 0, -196625, 0, 0, -131089, 0, 0, -65553, 0, 0, -17, 0, 0, 65519, 0, 0, 131055, 0, 0, 196591, 0, 0, 262127, 0, 0, 327663, 0, 0, -262160, 0, 0, -196624, 0, 0, -131088, 0, 0, -65552, 0, 0, -16, 0, 0, 65520, 0, 0, 131056, 0, 0, 196592, 0, 0, 262128, 0, 0, 327664, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, 65521, 0, 0, 131057, 0, 0, 196593, 0, 0, 262129, 0, 0, 327665, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 0, -65550, 0, 0, -14, 0, 0, 65522, 0, 0, 131058, 0, 0, 196594, 0, 0, 262130, 0, 0, 327666, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 131061, 0, 0, 196597, 0, 0, 262133, 0, 0, 327669, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, -327693, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -327685, 0, 0, -327686, 0, 0, -327687, 0, 0, -327688, 0, 0, -327689, 0, 0, -327690, 0, 0, -327691, 0, 0, -327692, 0, 0)
script = ExtResource("6_2vdft")

[node name="Player" parent="." instance=ExtResource("1_262s8")]
z_index = 5

[node name="PointLight2D" type="PointLight2D" parent="Player"]
scale = Vector2(10, 10)
energy = 0.3
shadow_enabled = true
texture = ExtResource("8_pgcgk")

[node name="Floor0" type="Node2D" parent="."]

[node name="DoorBoundary" parent="Floor0" instance=ExtResource("3_c1qiv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor0/DoorBoundary"]
position = Vector2(-287.25, -322)
shape = SubResource("RectangleShape2D_8h704")

[node name="DoorBoundary2" parent="Floor0" instance=ExtResource("3_c1qiv")]
isEntry = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor0/DoorBoundary2"]
position = Vector2(-162, -323)
shape = SubResource("RectangleShape2D_8h704")

[node name="StairBoundary" parent="Floor0" instance=ExtResource("4_1t2o8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor0/StairBoundary"]
position = Vector2(-855.699, -383.5)
rotation = -3.14159
scale = Vector2(9.06331, -10.9015)
shape = SubResource("RectangleShape2D_q1qes")

[node name="StairBoundary2" parent="Floor0" instance=ExtResource("4_1t2o8")]
floor = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor0/StairBoundary2"]
position = Vector2(-1054, -385)
rotation = -3.14159
scale = Vector2(9.06331, -10.9015)
shape = SubResource("RectangleShape2D_q1qes")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.454902, 0.486275, 0.670588, 1)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_mm0v2")

[node name="Floor1" type="Node2D" parent="."]

[node name="FireStarter" parent="." instance=ExtResource("11_eps8b")]

[node name="Lights" type="Node2D" parent="."]

[node name="Firetruck" parent="." instance=ExtResource("9_w0xht")]
z_index = 1
position = Vector2(123, -288)
rotation = -1.5708

[node name="Hose" parent="." instance=ExtResource("10_sybti")]

[node name="Extinguisher" parent="." instance=ExtResource("11_o5om0")]

[node name="BreakerOutside" parent="." instance=ExtResource("11_uetja")]
z_index = 1
position = Vector2(-417, -660)
